--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 <body>
 <!-- barra de navegacion -->
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" href="./index.html">El Tiempo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <!-- ms-auto para que link se trasladen  a la derecha -->
+      <div class="navbar-nav ms-auto">
         <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-        <a class="nav-link" href="#">Detalle</a>
-        <a class="nav-link" href="#">Pricing</a>
-      </div>
+        <a class="nav-link" href="./detalle.html">Detalle</a>
+              </div>
     </div>
   </div>
 </nav>
@@ -44,16 +44,162 @@
     <h1 class="text-center">EL TIEMPO DE LA IX REGION</h1>
     <h2 class="text-center">PREPARA TU FIN DE SEMANA</h2>
 <div class="row row-cols-1 row-cols-md-4 row-cols-lg-6 g-4">
+    <!-- tarjeta principal start-->
   <div class="col">
     <div class="card text-center">
       <i class="bi bi-brightness-high"></i>
       <div class="card-body">
         <h5 class="card-title">TEMUCO</h5>
+        <p class="card-text">26°C</p>
+        <p class="card-text">Soleado</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <!-- tarjeta principal end -->
+<div class="col">
+    <div class="card text-center">
+      <i class="bi bi-brightness-high"></i>
+      <div class="card-body">
+        <h5 class="card-title">ANGOL</h5>
         <p class="card-text">28°C</p>
         <p class="card-text">Soleado</p>
       </div>
       <div class="card-body">
-        <a href="#" class="card-link">Ver Detalle</a>
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-clouds"></i>
+      <div class="card-body">
+        <h5 class="card-title">LOS ALAMOS</h5>
+        <p class="card-text">15°C</p>
+        <p class="card-text">Nublado</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-clouds"></i>
+      <div class="card-body">
+        <h5 class="card-title">CONTULMO</h5>
+        <p class="card-text">17°C</p>
+        <p class="card-text">Nublado</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-cloud-drizzle-fill"></i>
+      <div class="card-body">
+        <h5 class="card-title">QUEULE</h5>
+        <p class="card-text">18°C</p>
+        <p class="card-text">LLuvia</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-cloud-rain-fill"></i>
+      <div class="card-body">
+        <h5 class="card-title">LONCOCHE</h5>
+        <p class="card-text">16°C</p>
+        <p class="card-text">LLuvia</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-cloud-drizzle"></i>
+      <div class="card-body">
+        <h5 class="card-title">PUCON</h5>
+        <p class="card-text">18°C</p>
+        <p class="card-text">LLuvia Suave</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-brightness-high"></i>
+      <div class="card-body">
+        <h5 class="card-title">MELIPEUCO</h5>
+        <p class="card-text">22°C</p>
+        <p class="card-text">Soleado</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-cloudy"></i>
+      <div class="card-body">
+        <h5 class="card-title">LIUCURA</h5>
+        <p class="card-text">22°C</p>
+        <p class="card-text">Nublado</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-cloudy-fill"></i>
+      <div class="card-body">
+        <h5 class="card-title">LONQUIMAI</h5>
+        <p class="card-text">20°C</p>
+        <p class="card-text">Nublado</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-cloud-sun"></i>
+      <div class="card-body">
+        <h5 class="card-title">CURACAUTIN</h5>
+        <p class="card-text">23°C</p>
+        <p class="card-text">Nublado C/sol</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card text-center">
+      <i class="bi bi-cloud-sun"></i>
+      <div class="card-body">
+        <h5 class="card-title">COLLIPULLI</h5>
+        <p class="card-text">22°C</p>
+        <p class="card-text">Nublado</p>
+      </div>
+      <div class="card-body">
+        <a href="./detalle.html" class="card-link">Ver Detalle</a>
       </div>
     </div>
   </div>
@@ -68,9 +214,14 @@
 <!-- grilla de localidades end -->
 
 <!-- footer -->
- <footer>
+<footer class="container py-3 my-4"> 
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
+    <li class="nav-item">
+      <a href="./index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li> 
+      <li class="nav-item">
+        <a href="./detalle.html" class="nav-link px-2 text-body-secondary">Detalles</a></li>
+          <p class="container text-center text-body-secondary">© 2025 PORTAFOLIO FINAL M2 BOOTCAMP FRONT END</p>
+    </footer>
 
-
- </footer>
 </body>
 </html>
