termino interacciones con javascript

--- a/detalle.html
+++ b/detalle.html
@@ -40,10 +40,49 @@
   </div>
 </nav>
 
-<main>
-     <h1>DETALLE</h1>
+<main class="container">
+  <section class="row">
+    <div class="col col-lg-8">
+<h1>MIRA EL TIEMPO EN:</h1>
+<!-- card horizontal start-->
+<div class="card mb-3">
+  <div class="row g-0">
+    <div class="col-lg-4 d-flex justify-content-center align-item-center">
+      <i class="bi bi-brightness-high" style="font-size: 100px;"></i>
+    </div>
+    <div class="col-lg-8">
+      <div class="card-body">
+        <h2 class="card-title">TEMUCO</h2>
+        <ul class="list-group list-group-flush">
+    <li class="list-group-item">SOLEADO</li>  
+  </ul>
+        <p class="card-text"><small class="text-body-secondary">Ultima actualizacion hace 5 minutos</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- card horizontal end -->
+     </div>
+<div class="col col-lg-4">
+  <h3>Pronostico Semanal</h3>
+  <!-- card pronostico -->
+   <div class="card my-4">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><i class="bi bi-brightness-high"></i>  Lunes: 24°C</li>
+    <li class="list-group-item"><i class="bi bi-brightness-high"></i>  Martes: 23°C</li>
+    <li class="list-group-item"><i class="bi bi-brightness-high"></i>  Miercoles: 23°C</li>
+    <li class="list-group-item"><i class="bi bi-brightness-high"></i>  Jueves: 20°C</li>
+    <li class="list-group-item"><i class="bi bi-clouds"></i>  Viernes: 19°C</li>
+    <li class="list-group-item"><i class="bi bi-clouds"></i>  Sabado: 19°C</li>
+    <li class="list-group-item"><i class="bi bi-clouds"></i>  Domingo: 17°C</li>
+  </ul>
+</div>
+</div>
+
+  </section>
+     
 </main>
-<!-- footer -->
+<!-- footer --><!-- footer -->
 <footer class="container py-3 my-4"> 
   <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
     <li class="nav-item">
@@ -52,6 +91,7 @@
         <a href="./detalle.html" class="nav-link px-2 text-body-secondary">Detalles</a></li>
           <p class="container text-center text-body-secondary">© 2025 PORTAFOLIO FINAL M2 BOOTCAMP FRONT END</p>
     </footer>
+
 
 
 </body>
