--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <a href="./index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li> 
       <li class="nav-item">
         <a href="./detalle.html" class="nav-link px-2 text-body-secondary">Detalles</a></li>
-          <p class="container text-center text-body-secondary">© 2025 PORTAFOLIO FINAL M2 BOOTCAMP FRONT END</p>
+          <p class="container text-center text-body-secondary">© 2025 PORTAFOLIO FINAL M2 BOOTCAMP FRONT END DE MARCELO CATALAN</p>
     </footer>
 
 </body>
