agrega estructura sass

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script  defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 <!-- mi css -->
- <link rel="stylesheet" href="./assets/css/style.css">
+ <link rel="stylesheet" href="./assets/css/main.css">
 
  <!-- mi js -->
   <script src="./assets/js/script.js"></script>
@@ -47,7 +47,7 @@
     <!-- tarjeta principal start-->
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-brightness-high"></i>
+      <i class="bi bi-brightness-high card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">TEMUCO</h5>
         <p class="card-text">26°C</p>
@@ -61,7 +61,7 @@
   <!-- tarjeta principal end -->
 <div class="col">
     <div class="card text-center">
-      <i class="bi bi-brightness-high"></i>
+      <i class="bi bi-brightness-high card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">ANGOL</h5>
         <p class="card-text">28°C</p>
@@ -75,7 +75,7 @@
 
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-clouds"></i>
+      <i class="bi bi-clouds card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">LOS ALAMOS</h5>
         <p class="card-text">15°C</p>
@@ -88,7 +88,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-clouds"></i>
+      <i class="bi bi-clouds card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">CONTULMO</h5>
         <p class="card-text">17°C</p>
@@ -101,7 +101,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-cloud-drizzle-fill"></i>
+      <i class="bi bi-cloud-drizzle-fill card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">QUEULE</h5>
         <p class="card-text">18°C</p>
@@ -114,7 +114,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-cloud-rain-fill"></i>
+      <i class="bi bi-cloud-rain-fill card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">LONCOCHE</h5>
         <p class="card-text">16°C</p>
@@ -127,7 +127,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-cloud-drizzle"></i>
+      <i class="bi bi-cloud-drizzle card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">PUCON</h5>
         <p class="card-text">18°C</p>
@@ -140,7 +140,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-brightness-high"></i>
+      <i class="bi bi-brightness-high card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">MELIPEUCO</h5>
         <p class="card-text">22°C</p>
@@ -153,7 +153,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-cloudy"></i>
+      <i class="bi bi-cloudy card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">LIUCURA</h5>
         <p class="card-text">22°C</p>
@@ -166,7 +166,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-cloudy-fill"></i>
+      <i class="bi bi-cloudy-fill card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">LONQUIMAI</h5>
         <p class="card-text">20°C</p>
@@ -179,7 +179,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-cloud-sun"></i>
+      <i class="bi bi-cloud-sun card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">CURACAUTIN</h5>
         <p class="card-text">23°C</p>
@@ -192,7 +192,7 @@
   </div>
   <div class="col">
     <div class="card text-center">
-      <i class="bi bi-cloud-sun"></i>
+      <i class="bi bi-cloud-sun card__icon"></i>
       <div class="card-body">
         <h5 class="card-title">COLLIPULLI</h5>
         <p class="card-text">22°C</p>
