se agregan nuevos estilos a la pagina web

--- a/index.html
+++ b/index.html
@@ -214,13 +214,15 @@
 <!-- grilla de localidades end -->
 
 <!-- footer -->
-<footer class="container py-3 my-4"> 
-  <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
-    <li class="nav-item">
-      <a href="./index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li> 
-      <li class="nav-item">
-        <a href="./detalle.html" class="nav-link px-2 text-body-secondary">Detalles</a></li>
-          <p class="container text-center text-body-secondary">© 2025 PORTAFOLIO FINAL M2 BOOTCAMP FRONT END DE MARCELO CATALAN</p>
+<footer class="py-3 my-4 footer"> 
+  <ul class="nav border-bottom pb-3 mb-3 navigation"> 
+    <li class="nav-item navigation__item">
+      <a href="./index.html" class="px-2">Inicio</a>
+    </li> 
+      <li class="nav-item navigation__item">
+        <a href="./detalle.html" class="px-2">Detalles</a></li>
+  </ul>
+  <p class="text-center text-body-secondary">2025 BOOTCAMP FRONT-END</p>
     </footer>
 
 </body>
