--- a/index.html
+++ b/index.html
@@ -43,172 +43,9 @@
 <main class="container" my-4>
     <h1 class="text-center">EL TIEMPO DE LA IX REGION</h1>
     <h2 class="text-center">PREPARA TU FIN DE SEMANA</h2>
-<div class="row row-cols-1 row-cols-md-4 row-cols-lg-6 g-4">
-    <!-- tarjeta principal start-->
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-brightness-high card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">TEMUCO</h5>
-        <p class="card-text">26°C</p>
-        <p class="card-text">Soleado</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <!-- tarjeta principal end -->
-<div class="col">
-    <div class="card text-center">
-      <i class="bi bi-brightness-high card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">ANGOL</h5>
-        <p class="card-text">28°C</p>
-        <p class="card-text">Soleado</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-clouds card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">LOS ALAMOS</h5>
-        <p class="card-text">15°C</p>
-        <p class="card-text">Nublado</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-clouds card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">CONTULMO</h5>
-        <p class="card-text">17°C</p>
-        <p class="card-text">Nublado</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-cloud-drizzle-fill card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">QUEULE</h5>
-        <p class="card-text">18°C</p>
-        <p class="card-text">LLuvia</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-cloud-rain-fill card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">LONCOCHE</h5>
-        <p class="card-text">16°C</p>
-        <p class="card-text">LLuvia</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-cloud-drizzle card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">PUCON</h5>
-        <p class="card-text">18°C</p>
-        <p class="card-text">LLuvia Suave</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-brightness-high card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">MELIPEUCO</h5>
-        <p class="card-text">22°C</p>
-        <p class="card-text">Soleado</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-cloudy card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">LIUCURA</h5>
-        <p class="card-text">22°C</p>
-        <p class="card-text">Nublado</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-cloudy-fill card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">LONQUIMAI</h5>
-        <p class="card-text">20°C</p>
-        <p class="card-text">Nublado</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-cloud-sun card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">CURACAUTIN</h5>
-        <p class="card-text">23°C</p>
-        <p class="card-text">Nublado C/sol</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card text-center">
-      <i class="bi bi-cloud-sun card__icon"></i>
-      <div class="card-body">
-        <h5 class="card-title">COLLIPULLI</h5>
-        <p class="card-text">22°C</p>
-        <p class="card-text">Nublado</p>
-      </div>
-      <div class="card-body">
-        <a href="./detalle.html" class="card-link">Ver Detalle</a>
-      </div>
-    </div>
-  </div>
+<div class="row row-cols-1 row-cols-md-4 row-cols-lg-6 g-4 justify-content-center" id="lugares">
+ <!-- ahora se insertaran dinamicamente los lugares-->   
 </div>
-
-  
-  
-  
-
 
 </main>
 <!-- grilla de localidades end -->
