--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <link rel="stylesheet" href="./assets/css/main.css">
 
  <!-- mi js -->
-  <script src="./assets/js/script.js"></script>
+  <script defer src="./assets/js/script.js"></script>
 
 </head>
 <body>
@@ -40,7 +40,7 @@
 </nav>
 
 <!-- grilla de localidades start -->
-<main class="container" my-4>
+<main class="container my-4">
     <h1 class="text-center">EL TIEMPO DE LA IX REGION</h1>
     <h2 class="text-center">PREPARA TU FIN DE SEMANA</h2>
 <div class="row row-cols-1 row-cols-md-4 row-cols-lg-6 g-4 justify-content-center" id="lugares">
