--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <link rel="stylesheet" href="./assets/css/main.css">
 
  <!-- mi js -->
-  <script defer src="./assets/js/script.js"></script>
+  <script defer type="module" src="./assets/js/script.js"></script>
 
 </head>
 <body>
