crea funcion para recorrer array pronosticoSemanal y mostrarlo en una lista en detalle.html

--- a/detalle.html
+++ b/detalle.html
@@ -49,14 +49,9 @@
   <h3>Pronostico Semanal</h3>
   <!-- card pronostico -->
    <div class="card my-4">
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item"><i class="bi bi-brightness-high"></i>  Lunes: 24°C</li>
-    <li class="list-group-item"><i class="bi bi-brightness-high"></i>  Martes: 23°C</li>
-    <li class="list-group-item"><i class="bi bi-brightness-high"></i>  Miercoles: 23°C</li>
-    <li class="list-group-item"><i class="bi bi-brightness-high"></i>  Jueves: 20°C</li>
-    <li class="list-group-item"><i class="bi bi-clouds"></i>  Viernes: 19°C</li>
-    <li class="list-group-item"><i class="bi bi-clouds"></i>  Sabado: 19°C</li>
-    <li class="list-group-item"><i class="bi bi-clouds"></i>  Domingo: 17°C</li>
+  <ul class="list-group list-group-flush" id="pronosticoSemanal">
+    
+    
   </ul>
 </div>
 </div>
