--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <!-- ms-auto para que link se trasladen  a la derecha -->
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-        <a class="nav-link" href="./detalle.html">Detalle</a>
+      <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html"
+                >Inicio</a>              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./detalle.html">Detalle</a>
               </div>
     </div>
   </div>
