--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./index.html"
-                >Inicio</a>              >
+                >Inicio</a> 
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./detalle.html">Detalle</a>
